--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "scikit-learn>=1.7.2",
     "scipy>=1.15.3",
     "seaborn>=0.13.2",
+    "starlette>=0.49.1",
     "tabulate>=0.9.0",
     "weasyprint>=66.0",
 ]
