--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "scipy>=1.15.3",
     "seaborn>=0.13.2",
     "starlette>=0.49.1",
+    "brotli>=1.2.0",
     "tabulate>=0.9.0",
     "weasyprint>=66.0",
 ]
