--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "seaborn>=0.13.2",
     "starlette>=0.49.1",
     "brotli>=1.2.0",
+    "fonttools>=4.60.2",
     "tabulate>=0.9.0",
     "weasyprint>=66.0",
 ]
